--- a/styles/custom.css
+++ b/styles/custom.css
@@ -136,7 +136,7 @@ blockquote {
     background: url(../pictures/jolicode.svg) left 53% no-repeat;
     bottom: 0;
     color: #888;
-    content: 'HHVM et "Hack", prenez 2 versions d\'avance sur PHP';
+    content: 'Retour d\'expérience, ARTE API';
     font-size: 14px;
     height: 30px;
     left: 40px;
