Last commit, stress level over 9000

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -136,7 +136,7 @@ blockquote {
     background: url(../pictures/jolicode.svg) left 53% no-repeat;
     bottom: 0;
     color: #888;
-    content: 'Retour d\'expérience, ARTE API - 2015';
+    content: 'Retour d\'expérience, ARTE API - 2015 - @thibz';
     font-size: 14px;
     height: 30px;
     left: 40px;
